@@ -62,6 +62,7 @@ importFrom(GenomeInfoDb,seqlevelsInUse)
 importFrom(GenomeInfoDb,seqlevelsStyle)
 importFrom(GenomeInfoDb,seqnames)
 importFrom(GenomeInfoDb,sortSeqlevels)
+importFrom(GenomicFeatures,cdsByOverlaps)
 importFrom(GenomicFeatures,exonsByOverlaps)
 importFrom(GenomicFeatures,transcriptsByOverlaps)
 importFrom(GenomicRanges,GRanges)
