@@ -7,6 +7,7 @@ SIGNIFICANT USER-VISIBLE CHANGES
       calculate the minimum number of supporting reads (instead of assuming a
       default BQ of 30). By default BQ is capped at 50 and variants below 25
       are ignored. Set min.supporting.reads to 0 to turn this off (#206).
+    o More robust annotation of intervals with gene symbols 
       
 BUGFIXES
 
